Updated GitHub link

--- a/pharmacogenomics.ipynb
+++ b/pharmacogenomics.ipynb
@@ -1,6 +1,7 @@
 {
   "cells": [
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "4dzuhQOgOn3Y"
@@ -35,6 +36,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "gs8PvgYjOn3a"
@@ -77,6 +79,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "Wv8Y7c44On3c"
@@ -106,7 +109,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "!git clone https://github.com/AlexanderHauser/PGx-workshop"
+        "!git clone https://github.com/AlexanderHauser/MIND-PGx-workshop"
       ]
     },
     {
@@ -157,6 +160,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "0yMIbWeBOn3e"
@@ -202,6 +206,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "mLNfXVbHOn3f"
@@ -250,6 +255,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "4RHtyoK5On3h"
@@ -320,6 +326,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "Vz0v-YKFOn3j"
@@ -378,6 +385,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "ucewrultOn3k"
@@ -420,6 +428,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "8qCXhGg9On3l"
@@ -431,6 +440,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "6zYarVQbOn3m"
@@ -638,6 +648,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "M1mjl76FOn3n"
@@ -772,6 +783,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "9H_PSsiJOn3n"
@@ -1089,6 +1101,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "5ualorBhOn3p"
@@ -1103,6 +1116,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "bA4Ayu7lOn3p"
@@ -1154,6 +1168,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "x_xkYpQsOn3q"
@@ -1420,6 +1435,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "iS_YWPOcOn3r"
@@ -1467,6 +1483,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "zMNHbU9bOn3s"
@@ -1638,6 +1655,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "FesvOy3JOn3t"
@@ -1726,6 +1744,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "4_Kdcg8KOn3u"
@@ -1747,6 +1766,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "9P8qDhv9On3u"
@@ -1778,7 +1798,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8.12"
+      "version": "3.8.13"
     },
     "orig_nbformat": 4,
     "widgets": {
