--- a/pharmacogenomics.ipynb
+++ b/pharmacogenomics.ipynb
@@ -1,7 +1,6 @@
 {
   "cells": [
     {
-      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "4dzuhQOgOn3Y"
@@ -36,7 +35,6 @@
       ]
     },
     {
-      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "gs8PvgYjOn3a"
@@ -60,7 +58,7 @@
         "<div class=\"alert alert-info\" role=\"alert\">\n",
         "\n",
         "❗️ **To run the code in a cell, you should:**\n",
-        "- Place your mouse cursor in the cell, and click (this gives the cell *focus*) to make it active \n",
+        "- Place your mouse cursor in the cell, and click (this gives the cell *focus*) to make it active\n",
         "- Hold down the <b>Shift</b> key, and press the <b>Return</b> key.\n",
         "\n",
         "If this is successful, you should see the input marker to the left of the cell change from\n",
@@ -79,7 +77,6 @@
       ]
     },
     {
-      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "Wv8Y7c44On3c"
@@ -126,7 +123,7 @@
         }
       ],
       "source": [
-        "!git clone https://github.com/AlexanderHauser/MIND-PGx-workshop"
+        "!git clone"
       ]
     },
     {
@@ -181,7 +178,6 @@
       ]
     },
     {
-      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "0yMIbWeBOn3e"
@@ -191,7 +187,6 @@
       ]
     },
     {
-      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "jH2ZR83f7J2a"
@@ -525,7 +520,6 @@
       ]
     },
     {
-      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "mLNfXVbHOn3f"
@@ -575,7 +569,6 @@
       ]
     },
     {
-      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "4RHtyoK5On3h"
@@ -650,7 +643,6 @@
       ]
     },
     {
-      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "Vz0v-YKFOn3j"
@@ -711,7 +703,6 @@
       ]
     },
     {
-      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "ucewrultOn3k"
@@ -753,7 +744,6 @@
       ]
     },
     {
-      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "8qCXhGg9On3l"
@@ -765,7 +755,6 @@
       ]
     },
     {
-      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "6zYarVQbOn3m"
@@ -973,7 +962,6 @@
       ]
     },
     {
-      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "M1mjl76FOn3n"
@@ -1186,7 +1174,6 @@
       ]
     },
     {
-      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "9H_PSsiJOn3n"
@@ -1293,7 +1280,6 @@
       ]
     },
     {
-      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "5ualorBhOn3p"
@@ -1308,7 +1294,6 @@
       ]
     },
     {
-      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "bA4Ayu7lOn3p"
@@ -1680,7 +1665,6 @@
       ]
     },
     {
-      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "BahW_r1oxuZa"
@@ -1943,7 +1927,6 @@
       ]
     },
     {
-      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "HUGwurUCPDHk"
@@ -2300,7 +2283,6 @@
       ]
     },
     {
-      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "zMNHbU9bOn3s"
@@ -2459,7 +2441,6 @@
       ]
     },
     {
-      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "FesvOy3JOn3t"
@@ -2571,7 +2552,6 @@
       ]
     },
     {
-      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "4_Kdcg8KOn3u"
@@ -2593,7 +2573,6 @@
       ]
     },
     {
-      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "9P8qDhv9On3u"
