--- a/pharmacogenomics.ipynb
+++ b/pharmacogenomics.ipynb
@@ -10,13 +10,14 @@
         "\n",
         "### *A short hands-on guide for exploring pharmacogenomic data using python scripts*\n",
         "\n",
-        "In today's workshop we will have a quick overview on how to extract data from public ressources in the field of pharmacogenomics and how to explore aggregated and individual information with Jupyter notebooks.\n",
+        "In today's workshop we will have a quick overview on how to extract data from public ressources in the field of pharmacogenomics and how to explore aggregated and individual pharmacogenomic testing information with Jupyter notebooks.\n",
         "\n",
         "The workshop will be divided in roughly 3 parts:\n",
         "\n",
         "- Introduction to Jupyter notebooks and PharmGKB drug label data (20 min)\n",
         "- Data preparation and data exploration of clinical variants (20 min)\n",
         "- Focused assessment of mutations in a specific protein (20 min)\n",
+        "- Your investigation of a specific disease area for a PGx report (20 min)\n",
         "\n",
         "These are the learning objectives of today's workshop:\n",
         "\n",
